--- a/src/assets/Style/Components/block.scss
+++ b/src/assets/Style/Components/block.scss
@@ -4,13 +4,13 @@
 
 .block{
   box-sizing: border-box;
-  background-color: $color_WS;
+  background-color: white;
   width: 100%;
   padding: 25px;
   color: black;
 
-  &.shadowed{
-    box-shadow: 0 0 10px 3px rgba(0,0,0,.2);
+  &.withshadow{
+    box-shadow: 0 12px 30px 0 rgba(35,39,42,.1);
   }
 
   &.round{
