--- a/src/assets/Style/Components/grid.scss
+++ b/src/assets/Style/Components/grid.scss
@@ -8,10 +8,16 @@
   &.form-banner{
     grid-template-columns: 450px 1fr;
   }
+  &.featured-sales{
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media (max-width: 1040px) {
   .grid.form-banner {
+    grid-template-columns: 1fr;
+  }
+  .grid.featured-sales {
     grid-template-columns: 1fr;
   }
 }
