--- a/src/assets/Style/Components/header.scss
+++ b/src/assets/Style/Components/header.scss
@@ -1,55 +1,176 @@
 .header{
-  display: flex;
-  width: 100%;
-  height: 60px;
   @extend .m-25;
 }
 
-.headerInner{
-  display: flex;
-  padding: 0;
-  width: 100%;
-  align-items: center;
-  flex-wrap: wrap;
-}
+@media (min-width: 1040px) {
 
-.header ul{
-  list-style: none;
-  color: $color_WS;
-}
-
-body.light .header ul{
-  color: black;
-}
-
-.navbar{
-  padding: 0;
-  display: flex;
-  & li{
-    margin-right: 35px;
+  .header{
+    display: flex;
+    width: 100%;
+    height: 60px;
   }
 
-  & li:last-child{
-    margin-right: 0;
+  .header input{
+    display: none;
   }
 
-  &.right{
-    margin-left: auto;
+  .headerInner{
+    display: flex;
+    padding: 0;
+    width: 100%;
+    align-items: center;
+    flex-wrap: wrap;
   }
-}
 
-.header a{
-  text-decoration: none;
-  color: #d4d4d5;
-  transition: 0.2s;
-  &:hover{
+  .header ul{
+    list-style: none;
     color: $color_WS;
-    transition: 0.2s
   }
-  body.light &{
-    color: #0000008a;
-  }
-  body.light &:hover{
+
+  body.light .header ul{
     color: black;
   }
+
+  .navbar{
+    padding: 0;
+    display: flex;
+    & li{
+      margin-right: 35px;
+    }
+
+    & li:last-child{
+      margin-right: 0;
+    }
+
+    &.right{
+      margin-left: auto;
+    }
+  }
+
+  .header a{
+    text-decoration: none;
+    color: #d4d4d5;
+    transition: 0.2s;
+    &:hover{
+      color: $color_WS;
+      transition: 0.2s
+    }
+    body.light &{
+      color: #0000008a;
+    }
+    body.light &:hover{
+      color: black;
+    }
+  }
+
+}
+
+@media (max-width: 1040px) {
+
+  .header
+  {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;
+
+    z-index: 1;
+
+    -webkit-user-select: none;
+    user-select: none;
+  }
+
+  .header input
+  {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+
+    cursor: pointer;
+
+    opacity: 0;
+    z-index: 2;
+
+    -webkit-touch-callout: none;
+  }
+
+  .header span
+  {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+
+    background: #cdcdcd;
+    border-radius: 3px;
+
+    z-index: 1;
+
+    transform-origin: 4px 0px;
+
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+
+  .header span:first-child
+  {
+    transform-origin: 0% 0%;
+  }
+
+  .header span:nth-last-child(2)
+  {
+    transform-origin: 0% 100%;
+  }
+
+  .header input:checked ~ span
+  {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+
+  .header input:checked ~ span:nth-last-child(3)
+  {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  .header input:checked ~ span:nth-last-child(2)
+  {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  .navbar
+  {
+    position: absolute;
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+
+    background: #ededed;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+
+  .navbar li
+  {
+    padding: 10px 0;
+    font-size: 22px;
+  }
+
+  .header input:checked ~ ul
+  {
+    transform: none;
+  }
+
 }
