--- a/src/assets/Style/Components/header.scss
+++ b/src/assets/Style/Components/header.scss
@@ -145,7 +145,7 @@
     transform: rotate(-45deg) translate(0, -1px);
   }
 
-  .navbar
+  .header-in
   {
     position: absolute;
     width: 300px;
