--- a/src/assets/Style/Components/header.scss
+++ b/src/assets/Style/Components/header.scss
@@ -131,6 +131,7 @@
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
     background: #232323;
+    margin-bottom: -22px;
   }
 
   .header input:checked ~ .span-holder span:nth-last-child(3)
