--- a/src/assets/Style/Components/header.scss
+++ b/src/assets/Style/Components/header.scss
@@ -2,6 +2,13 @@
   @extend .m-25;
 }
 
+.header .logo{
+  margin: 1em 0;
+  display: inline-block;
+  font-weight: bold;
+  width: auto;
+}
+
 @media (min-width: 1040px) {
 
   .header-in{
@@ -94,6 +101,10 @@
     z-index: 2;
 
     -webkit-touch-callout: none;
+  }
+
+  .span-holder{
+    display: inline-block;
   }
 
   .header .span-holder span
