--- a/src/assets/Style/Components/header.scss
+++ b/src/assets/Style/Components/header.scss
@@ -21,6 +21,10 @@
 
 @media (min-width: 1040px) {
 
+  .paranja{
+    visibility: hidden;
+  }
+
   .header-in{
     display: flex;
     padding: 0;
