--- a/src/assets/Style/Components/grid.scss
+++ b/src/assets/Style/Components/grid.scss
@@ -2,6 +2,7 @@
   display: grid;
   width: 100%;
   grid-gap: 20px;
+  @extend .m-20;
   &.features{
     grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   }
