--- a/src/assets/Style/Components/grid.scss
+++ b/src/assets/Style/Components/grid.scss
@@ -7,6 +7,9 @@
     grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   }
   &.form-banner{
+    grid-template-columns: 1fr 450px;
+  }
+  &.form-banner-reversed{
     grid-template-columns: 450px 1fr;
   }
   &.featured-sales{
