--- a/src/assets/Style/Components/form.scss
+++ b/src/assets/Style/Components/form.scss
@@ -27,6 +27,12 @@
   margin-bottom: 0;
 }
 
+.field .error{
+  margin-top: 5px;
+  color: darken( $color_CP, 25% );
+
+}
+
 label{
   font-size: 15px;
   display: inline-block;
