--- a/src/assets/Style/Components/progressbar.scss
+++ b/src/assets/Style/Components/progressbar.scss
@@ -1,17 +1,27 @@
 .progress-bar{
   width: 100%;
-  height: 25px;
-  background-color: #555555;
+  height: 14px;
+  background-color: #d4d4d4;
   border-radius: 20px;
+  @extend .m-25;
 }
 
 .progress-bar .progress{
   height: 100%;
   background-color: $color_LG;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  transition: 0.4s;
+  border-radius: 20px;
+  transition: 0.75s;
   transition-timing-function: ease-out;
+}
+
+.progress-bar.colored .progress.step-0, .progress-bar.colored .progress.step-1{
+  background-color: $color_CP;
+}
+
+.progress-bar.colored .progress.step-2, .progress-bar.colored .progress.step-3{
+  background-color: #FF7F50;
+}
+
+.progress-bar.colored .progress.step-4, .progress-bar.colored .progress.step-5{
+  background-color: $color_LG;
 }
