--- a/src/assets/Style/Components/main.scss
+++ b/src/assets/Style/Components/main.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700&display=swap&subset=cyrillic');
 $primary-font: 'Roboto', sans-serif;
 
 body{
