--- a/src/assets/Style/colors.scss
+++ b/src/assets/Style/colors.scss
@@ -1,4 +1,5 @@
 $color_primary: rgba(27, 36, 47, 1);
+$color_primary_text: white;
 $color_CG: rgba(35, 35, 39, 1);
 $color_WS: rgba(246, 244, 243, 1);
 $color_MRP: rgba(13, 6, 48, 1);
