--- a/src/assets/Style/Components/button.scss
+++ b/src/assets/Style/Components/button.scss
@@ -26,21 +26,21 @@
   @include buttonColored(#e0e1e2, black);
   text-align: center;
 }
-
 @media (max-width: 768px) {
   .button {
     font-size: 12pt;
   }
 }
 
+.button:focus {outline:0;}
+
 .button--no-style{
   background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
 
 .button.dis-border{
@@ -63,6 +63,32 @@
 
 .button.right{
   margin-left: auto;
+}
+
+/*--------------
+      Primary
+  --------------*/
+
+.button.primary{
+  @include buttonColored($color_primary, $color_primary_text);
+  transition: 0.2s;
+  &:hover{
+    transition: 0.2s;
+    background-color: #DEE3E9;
+  }
+}
+
+/*--------------
+      Secondary
+  --------------*/
+
+.button.secondary{
+  @include buttonColored(#ecf1f7, #3d7ab6);
+  transition: 0.2s;
+  &:hover{
+    transition: 0.2s;
+    background-color: #DEE3E9;
+  }
 }
 
   /*--------------
