--- a/src/assets/Style/Components/button.scss
+++ b/src/assets/Style/Components/button.scss
@@ -25,6 +25,8 @@
   transition: 0.3s;
   @include buttonColored(#e0e1e2, black);
   text-align: center;
+  align-items: center;
+  display: flex;
 }
 @media (max-width: 768px) {
   .button {
